# compete

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pipeline.yml
api/: __init__.py  db.py  deps.py  main.py  repository.py  schemas.py
api/routers/: analytics.py  competitors.py  pipeline.py  reports.py  signals.py
blog/: watching-the-competition.mdx
config/: competitors.yaml
docs/: AGENTS.md  ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  RUNBOOK.md
docs/adr/: 0001-duckdb-over-postgres.md  0002-snapshot-diffing.md  0003-deterministic-pipeline.md
pipeline/: __init__.py  cli.py  config.py  logging_setup.py  schemas.py  transform.py
pipeline/collect/: __init__.py  base.py  dispatch.py  dynamic.py  jobs.py  rss.py  static.py
pipeline/detect/: __init__.py  change.py
pipeline/extract/: __init__.py  embeddings.py  llm.py  runner.py
pipeline/report/: __init__.py  alerts.py  generate.py  pdf.py
pipeline/storage/: __init__.py  duckdb_store.py  parquet_store.py
scripts/: demo.py  inspect_marts.py  screenshots.py  seed_demo.py
tests/: test_api.py  test_collect_base.py  test_collect_sources.py  test_extract.py  test_report.py  test_schemas.py  test_storage.py
warehouse/dbt/: .user.yml  dbt_project.yml  profiles.yml
warehouse/dbt/models/marts/: _marts.yml  agg_weekly_competitor.sql  dim_competitors.sql  fct_changes.sql  fct_hiring.sql  fct_pricing_history.sql  fct_signal_duplicates.sql
warehouse/dbt/models/staging/: _sources.yml  _staging.yml  stg_changes.sql  stg_competitors.sql  stg_raw_pages.sql  stg_signals.sql
web/: .env.example  .prettierrc  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/scripts/: shoot.py  shoot_responsive.py
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(dashboard)/: layout.tsx
web/src/app/docs/: page.tsx
web/src/components/: app-shell.tsx  async-state.tsx  brand-logos.tsx  chart-card.tsx  charts.tsx  competitor-avatar.tsx  competitor-form-dialog.tsx  data-table.tsx  empty-state.tsx  markdown.tsx  page-header.tsx  page-transition.tsx  providers.tsx  relative-time.tsx  run-pipeline-button.tsx  signal-badge.tsx  signal-card.tsx  significance.tsx  stat-card.tsx  theme-toggle.tsx  timeline.tsx
web/src/components/landing/: count-up.tsx  cta.tsx  features.tsx  hero.tsx  how-it-works.tsx  landing-footer.tsx  landing-nav.tsx  live-signal-feed.tsx  logo-strip.tsx  marquee.tsx  reveal.tsx  (+4 more)
web/src/lib/: api.ts  hooks.ts  signal-meta.tsx  types.ts  utils.ts
(+14 files in other folders)
