[project]
name = "compete"
version = "0.1.0"
description = "Competitive Intelligence Platform - scheduled agents monitor competitors, extract structured signals via LLM, warehouse in DuckDB, serve a polished dashboard."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "compete" }]

dependencies = [
    # --- config / core ---
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "tenacity>=8.3",
    # --- collection ---
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "trafilatura>=1.10",
    "feedparser>=6.0",
    # playwright is installed separately (browser binaries) - see RUNBOOK
    "playwright>=1.44",
    # --- storage / warehouse ---
    "duckdb>=1.0",
    "pyarrow>=16.0",
    # --- LLM / extraction (Phase 2) ---
    "instructor>=1.3",
    "google-generativeai>=0.7",
    "groq>=0.9",
    "openai>=1.30",            # used for Ollama-compatible + generic endpoints
]

[project.optional-dependencies]
dbt = [
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
report = [
    "fpdf2>=2.7",              # markdown/text -> PDF, pure-Python (no GTK/Cairo native deps)
]
embed = [
    "sentence-transformers>=3.0",   # optional local MiniLM embeddings (pulls torch)
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[project.scripts]
compete = "pipeline.cli:app"
compete-api = "api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["pipeline", "api", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
# E501: line length handled by black.
# B008: FastAPI relies on Depends()/Query() in argument defaults (idiomatic).
# UP046: keep the explicit Generic[T] envelope (broad pydantic compatibility).
ignore = ["E501", "B008", "UP046"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
